manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-issuer

spec:
  tls:
    - hosts:
        - "tthd-app.link"
        - "todo.tthd-app.link"
      secretName: tthd-app-tls-wc
  rules:
    - host: todo.tthd-app.link
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
